force-app/main/default/objects/Sanction_Payment__c/Sanction_Payment__c.object-meta.xml
<CustomObject>
    <label>Sanction Payment</label>
    <nameField>
        <displayFormat>SP-{00000000}</displayFormat>
        <label>Sanction Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sanction Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>