force-app/main/default/objects/Sanction_Payment__c/fields/AmountDue__c.field-meta.xml
<CustomField>
    <fullName>AmountDue__c</fullName>
    <label>Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>