force-app/main/default/objects/Sanction_Payment__c/fields/Sanction__c.field-meta.xml
<CustomField>
    <fullName>Sanction__c</fullName>
    <label>Sanction</label>
    <referenceTo>Sanction__c</referenceTo>
    <relationshipLabel>Sanction Payments</relationshipLabel>
    <relationshipName>Sanction_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>