force-app/main/default/objects/Sanction_Payment__c/fields/Type_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Payment__c</fullName>
    <label>Type of Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Cashier’s Check</fullName>
            </value>
            <value>
                <fullName>Money Order</fullName>
            </value>
            <value>
                <fullName>Wire Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>