force-app/main/default/objects/Sanction_Payment__c/validationRules/Cancelled_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancelled_Reason_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Status__c, &apos;Cancelled&apos;),
ISBLANK( Cancelled_Reason__c ) 
)</errorConditionFormula>
    <errorMessage>Cancelled Reason field is required when Status fields equals &quot;Cancelled&quot;.</errorMessage>
</ValidationRule>