force-app/main/default/objects/Sanction_Payment__c/validationRules/Sanction_Payment_Status_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Sanction_Payment_Status_Required</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(Total_Payments__c)) &amp;&amp;
ISPICKVAL(Status__c, &apos;&apos;)</errorConditionFormula>
    <errorMessage>When Amount Due and Total Amount Paid are populated, Status is required.</errorMessage>
</ValidationRule>