force-app/main/default/objects/Sanction_Payment__c/listViews/AllSanctionPayments.listView-meta.xml
<ListView>
    <fullName>AllSanctionPayments</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>All Sanction Payments</label>
</ListView>